# taggerrs

./: Cargo.toml  README.md
src/: app.rs  main.rs
src/utils/: centralpanel_modules.rs  modal.rs  sidebar_modules.rs  static_page.rs
