[package]
name = "taggerrs"
version = "0.1.0"
authors = ["Dohyun Nam <https://github.com/dohyunnam>"]
edition = "2024"
include = ["LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.90.0"

[dependencies]
egui = "0.31.1"
eframe = { version = "0.31", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }

egui_extras = { version = "0.31.1", features = ["all_loaders"] }
image = { version = "0.25.6", features = ["jpeg", "png"] }
thumbnailer = "0.5.1"

serde = "1.0.219"    # app presistence

# Database
rusqlite = "0.37.0"
uuid = { version = "1.17.0", features = ["v4"]}