[package]
name = "taggerrs"
version = "0.1.0"
authors = ["Dohyun Nam <https://github.com/dohyunnam>"]
edition = "2024"
include = ["LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.90.0"

[dependencies]
egui = "0.32.0"
eframe = { version = "0.32", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }

# image support
egui_extras = { version = "0.32.0", features = ["all_loaders"] }
image = { version = "0.25.6", features = ["jpeg", "png"] }
mime = "0.3.17"

serde = "1.0.219"    # app presistence
egui-file-dialog = "0.11.0"  # non-blocking file dialog

# Database
rusqlite = "0.37.0"
uuid = { version = "1.17.0", features = ["v4"]}

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"